fixed dice number alignmnet

--- a/www/css/diceRoll.css
+++ b/www/css/diceRoll.css
@@ -22,13 +22,14 @@
 
 }
 .dieResult {
-  position: absolute;
-  top: 10px;
-  left: 13px;
-  padding: 10px;
-  font-size: 30px;
-  color: white;
-  text-align: center;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    font-size: 30px;
+    color: white;
+    text-align: center;
 }
 #die0{
   margin-left: 50%;
